wasm/fastq_info_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_azi_yqhi/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/74715ca98a8b0876057335b41d108f169a2bf71f.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/74715ca98a8b0876057335b41d108f169a2bf71f.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/268c36c7396559c9e3ee3450689dfdb26c48bb4b.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/268c36c7396559c9e3ee3450689dfdb26c48bb4b.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/8e376dfd3cc01c35f19439088de70ae9ea4bd6d0.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/8e376dfd3cc01c35f19439088de70ae9ea4bd6d0.json" for subsequent builds)
cache:INFO:  - ok
